<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:theme="@style/ThemeOverlay.AppCompat.Dark"
    tools:context=".RegisterActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/mainLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:clickable="true"
            android:clipToPadding="false"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center"
            android:minWidth="450dp"
            android:orientation="vertical"
            android:paddingStart="52dp"
            android:paddingTop="32dp"
            android:paddingEnd="52dp"
            android:paddingBottom="32dp">

            <TextView
                style="@style/TextAppearance.AppCompat.Headline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="32dp"
                android:text="@string/create_new_account" />

            <EditText
                android:id="@+id/inputEmail"
                style="@style/InputTextAlt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:autofillHints="email"
                android:hint="@string/email"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true" />

            <EditText
                android:id="@+id/inputUsername"
                style="@style/InputTextAlt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:digits="abcçdefgğhıijklmnoöprsştuüvyzxwq ABCÇDEFGĞHIİJKLMNOÖPRSŞTUÜVYZXWQ 0123456789"
                android:hint="@string/username"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="text"
                android:maxLength="30"
                android:maxLines="1"
                android:singleLine="true" />

            <EditText
                android:id="@+id/inputPassword"
                style="@style/InputTextAlt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:hint="@string/password"
                android:imeOptions="actionGo"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true" />

            <Button
                android:id="@+id/btRegister"
                style="@style/DefaultButtonAlt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="16dp"
                android:onClick="onClickRegister"
                android:text="@string/register"
                android:textColor="#000000" />

        </LinearLayout>

    </ScrollView>

    <ImageButton
        style="@style/Widget.AppCompat.ActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:contentDescription="@string/back"
        android:onClick="onBackPressed"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>