<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:theme="@style/ThemeOverlay.AppCompat.Dark"
    tools:context=".WelcomeActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/mainLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:clickable="true"
            android:clipToPadding="false"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center"
            android:minWidth="450dp"
            android:orientation="vertical"
            android:paddingStart="52dp"
            android:paddingTop="32dp"
            android:paddingEnd="52dp"
            android:paddingBottom="32dp">

            <ImageView
                android:layout_width="128dp"
                android:layout_height="128dp"
                android:layout_marginBottom="32dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/logo" />

            <EditText
                android:id="@+id/inputEmail"
                style="@style/InputTextAlt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:autofillHints="email"
                android:hint="@string/email"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true" />

            <EditText
                android:id="@+id/inputPassword"
                style="@style/InputTextAlt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp"
                android:autofillHints="password"
                android:hint="@string/password"
                android:imeOptions="actionGo"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true" />

            <Button
                android:id="@+id/btLogin"
                style="@style/DefaultButtonAlt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp"
                android:focusable="true"
                android:onClick="onClickLogin"
                android:text="@string/login"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/txtRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClickRegister"
                android:padding="16dp"
                android:text="SIGN UP"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/txtForgot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClickAccountAccess"
                android:padding="8dp"
                android:text="@string/cant_access_account"
                android:textColor="@android:color/white" />


        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>