<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clipToPadding="false"
    android:orientation="vertical"
    android:paddingStart="64dp"
    android:paddingTop="8dp"
    android:paddingEnd="8dp"
    android:paddingBottom="8dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginBottom="4dp"
        android:background="@drawable/message_bubble_bg_right"
        android:elevation="2dp"
        android:orientation="vertical"
        android:padding="4dp">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/imgMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="4dp"
                android:contentDescription="@string/image"
                app:riv_corner_radius_bottom_left="8dp"
                app:riv_corner_radius_bottom_right="8dp"
                app:riv_corner_radius_top_left="8dp" />

            <ProgressBar
                android:id="@+id/imageProgressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="16dp" />

        </FrameLayout>

        <TextView
            android:id="@+id/txtMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="6dp"
            android:text="@string/message"
            android:textColor="@android:color/white"
            android:textSize="15sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/txtStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/delivered" />

</LinearLayout>